--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
-    <string name="app_name">MatterOfTime</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name" translatable="false">MatterOfTime</string>
+    <string name="action_settings" translatable="false">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tempos">Tempos</string>
+    <string name="formula_de_compasso">Fórmula de compasso</string>
+    <string name="nota">Nota</string>
+    <string name="play">Tocar</string>
+    <string name="stop">Parar</string>
+    <string name="playlist">Lista de músicas</string>
+    <string name="bpm">BPM</string>
 </resources>
