layout play ok - finalizar main activity, fragment, metodos do contract, repository, view, presenter e teste

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="stop">Parar</string>
     <string name="playlist">Lista de músicas</string>
     <string name="bpm">BPM</string>
+    <string name="compasso_atual">Compasso atual</string>
+    <string name="proximo_compasso">Próximo compasso</string>
 </resources>
