--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name" translatable="false">MatterOfTime</string>
-    <string name="action_settings" translatable="false">Settings</string>
+    <string name="app_name" untranslatable="false">MatterOfTime</string>
+    <string name="action_settings" untranslatable="false">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
