--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,4 +9,5 @@
     <string name="stop">Stop</string>
     <string name="playlist">Playlist</string>
     <string name="bpm">BPM</string>
+    <string name="dialog_title">Dialog Title</string>
 </resources>
