--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,14 @@
     <string name="confirmar_compasso">Confirmar compasso</string>
     <string name="tempo_necessario">Necessário tempos por compasso</string>
     <string name="bpm_necessario">Necessário informar o BPM</string>
-    <string name="ordem_necessaria">Núme na ordem da playlist necessário</string>
-    <string name="sem_contagem">Tempos para pré-contagem necessário</string>
+    <string name="ordem_necessaria">Número na ordem da playlist necessário</string>
+    <string name="sem_contagem">Tempos para pré-contagem inválido</string>
     <string name="repeticoes">Repetições</string>
     <string name="tamanho_compassos">Seu compasso possui</string>
     <string name="compassos">compassos</string>
+    <string name="sem_musica">Sem musica selecionada</string>
+    <string name="sem_compasso">Sem compasso selecionado</string>
+    <string name="compasso_inexistente">Compasso inexistente</string>
+    <string name="musica_inexistente">Musica inexistente</string>
+    <string name="posicao_invalida">Posição para musica inválida</string>
 </resources>
