criação da area do usuario - completar presenter, fragment, repository, contract e SelectMusic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="baixar">Baixar</string>
     <string name="nome">Nome</string>
     <string name="atualizar_musica">Atualizar música</string>
+    <string name="pesquisar">Pesquisar</string>
 </resources>
