criação da area do usuario - completar presenter, fragment, repository, contract e pacote UploadMusic - TESTAR

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,5 +66,7 @@
     <string name="sucesso_importar">Sucesso ao importar arquivo</string>
     <string name="falha_importar">Falha ao importar</string>
     <string name="erro_login">Erro de Login</string>
+    <string name="email_necessario">Email necessário</string>
+    <string name="senha_necessaria">Senha Necessária</string>
 
 </resources>
