criação da area do usuario - completar presenter, fragment, repository, contract e SelectMusic - editMusic(compassos)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,6 @@
     <string name="erro_login">Erro de Login</string>
     <string name="email_necessario">Email necessário</string>
     <string name="senha_necessaria">Senha Necessária</string>
+    <string name="ordem_invalida">Ordem da música invalida</string>
 
 </resources>
