criação da area do usuario - completar presenter, fragment, repository, contract e pacote UploadMusic - arrumar confirmar compasso no editfragment - TESTAR

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="erro_cadastrar">Erro ao cadastrar usuário</string>
     <string name="cadastro_sucesso">Casdastro realizado com sucesso</string>
     <string name="login_sucesso">Login efetuado com sucesso</string>
+    <string name="ordem_igual">Há músicas com numero de ordenação igual</string>
 
 </resources>
