--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,15 +45,15 @@
     <string name="digite_email">Digite seu e-mail</string>
     <string name="senha">Senha</string>
     <string name="digite_senha">Digite sua senha</string>
-    <string name="enviar_musica">Enviar música</string>
+    <string name="enviar_musica">Enviar música: </string>
     <string name="selecionar_musica">Selecionar Musica</string>
     <string name="baixar_musica">Baixar música</string>
     <string name="musica">Música</string>
     <string name="baixar">Baixar</string>
     <string name="nome">Nome</string>
-    <string name="atualizar_musica">Atualizar música</string>
+    <string name="atualizar_musica">Atualizar música: </string>
     <string name="pesquisar">Pesquisar</string>
-    <string name="enviando_musica">Enviar música:</string>
+    <string name="enviando_musica">Enviar música</string>
     <string name="enviar">Enviar</string>
     <string name="cancelar">Cancelar</string>
     <string name="sucesso_envio">Música enviada com sucesso</string>
@@ -85,5 +85,8 @@
     <string name="cadastro_sucesso">Casdastro realizado com sucesso</string>
     <string name="login_sucesso">Login efetuado com sucesso</string>
     <string name="ordem_igual">Há músicas com numero de ordenação igual</string>
+    <string name="logout_sucesso">Logout realizado com sucesso</string>
+    <string name="usuario_nao_logado">Login não efetuado</string>
+    <string name="login_nao_realizado">Login não realizado</string>
 
 </resources>
