--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,13 +45,13 @@
     <string name="digite_email">Digite seu e-mail</string>
     <string name="senha">Senha</string>
     <string name="digite_senha">Digite sua senha</string>
-    <string name="enviar_musica">Enviar música: </string>
+    <string name="enviar_musica">Enviar música</string>
     <string name="selecionar_musica">Selecionar Musica</string>
     <string name="baixar_musica">Baixar música</string>
     <string name="musica">Música</string>
     <string name="baixar">Baixar</string>
     <string name="nome">Nome</string>
-    <string name="atualizar_musica">Atualizar música: </string>
+    <string name="atualizar_musica">Atualizar música</string>
     <string name="pesquisar">Pesquisar</string>
     <string name="enviando_musica">Enviar música</string>
     <string name="enviar">Enviar</string>
