--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,10 @@
     <string name="sem_conexao">Sem conexão de internet</string>
     <string name="obrigatorio">Obrigatório</string>
     <string name="repeticoes_necessaria">Repetições necessária</string>
+    <string name="o_compasso">O compasso </string>
+    <string name="compassos_nao_definidos"> não possui a quantidade de tempos definida</string>
+    <string name="repeticoes_nao_definidos"> não possui a quantidade de repetições definida</string>
+    <string name="bpm_nao_definido"> não possui o valor de BPM definido</string>
+    <string name="ordem_nao_definida"> não foi confirmado</string>
 
 </resources>
