bugs - Edit apos download

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,112 @@
     <string name="playlist">Playlist</string>
     <string name="bpm">BPM</string>
     <string name="dialog_title">Dialog Title</string>
+    <string name="adicionado">Added</string>
+    <string name="adicionar">Add</string>
+    <string name="atualizado">Updated</string>
+    <string name="atualizar_musica">Update music</string>
+    <string name="baixando_musica">Download music:</string>
+    <string name="baixar">Download</string>
+    <string name="baixar_musica">Download music</string>
+    <string name="bpm_nao_definido">BPM undefined</string>
+    <string name="bpm_necessario">BPM required</string>
+    <string name="cadastrar">Register</string>
+    <string name="cadastro">Register</string>
+    <string name="cadastro_sucesso">Registration completed</string>
+    <string name="cancelar">Cancel</string>
+    <string name="colcheia">Eighth note</string>
+    <string name="compasso">Measure</string>
+    <string name="compasso_atual">Current measure</string>
+    <string name="compasso_confirmado">Measure confirmed</string>
+    <string name="compasso_inexistente">Measure nonexistent</string>
+    <string name="compassos">Measures</string>
+    <string name="compassos_nao_definidos">Beats undefined</string>
+    <string name="confirmacaoSenhaNecessaria">Password verification required</string>
+    <string name="confirmar_compasso">Confirm measure</string>
+    <string name="confirme_senha">Confirm your password</string>
+    <string name="contar_entrada">Count</string>
+    <string name="deletado">Deleted</string>
+    <string name="deletar">Delete</string>
+    <string name="deletar_musica">Delete music</string>
+    <string name="digite_email">Enter your e-mail</string>
+    <string name="digite_senha">Enter your password</string>
+    <string name="editar_musica">Edit music</string>
+    <string name="email">E-mail</string>
+    <string name="email_invalido">Invalid e-mail</string>
+    <string name="email_necessario">E-mail required</string>
+    <string name="entrar">Enter</string>
+    <string name="enviando_musica">Upload music</string>
+    <string name="enviar">Upload</string>
+    <string name="enviar_musica">Upload music</string>
+    <string name="erro">Error</string>
+    <string name="erro_cadastrar">Error registering user</string>
+    <string name="erro_download">Error downloading music</string>
+    <string name="erro_envio">Error downloading music</string>
+    <string name="erro_login">Login error</string>
+    <string name="esqueci_senha">Forgot my passord</string>
+    <string name="falha_importar">Failed to import</string>
+    <string name="fusa">Thirty-second note</string>
+    <string name="icon">Icon</string>
+    <string name="informe_musica">Enter music name to search</string>
+    <string name="insere_compasso">Insert measure</string>
+    <string name="login_nao_realizado">Login unperformed</string>
+    <string name="login_sucesso">Login accomplished</string>
+    <string name="loginlogout">Login / Logout</string>
+    <string name="logout_sucesso">Logout accomplished</string>
+    <string name="minima">Half note</string>
+    <string name="musica">Music</string>
+    <string name="musica_confirmada">Music confirmed</string>
+    <string name="musica_inexistente">Music nonexistent</string>
+    <string name="name_is_required">Name required</string>
+    <string name="nome">Name</string>
+    <string name="nomedamusica">Music name</string>
+    <string name="numero_compasso">Measure #</string>
+    <string name="o_compasso">The measure</string>
+    <string name="obrigatorio">Required</string>
+    <string name="ordem_da_musica_na_playlist">Music order in playlist</string>
+    <string name="ordem_igual">There are songs with the same sort order</string>
+    <string name="ordem_invalida">Invalid music order</string>
+    <string name="ordem_nao_definida">Not confirmed</string>
+    <string name="ordem_necessaria">Required order in playlist</string>
+    <string name="pesquisar">Search</string>
+    <string name="posicao_invalida">Invalid position for music</string>
+    <string name="pre_contagem">Pre count</string>
+    <string name="proximo_compasso">Next measure</string>
+    <string name="quantidadecompassos">Measures quantity</string>
+    <string name="registro">Register</string>
+    <string name="remover_compasso">Remove measure</string>
+    <string name="repeticoes">Repetitions</string>
+    <string name="repeticoes_nao_definidos">Repetitions undefined</string>
+    <string name="repeticoes_necessaria">Repetitions required</string>
+    <string name="sair">Logout</string>
+    <string name="selecionar_musica">Select music</string>
+    <string name="sem_compasso">No measure selected</string>
+    <string name="sem_conexao">No internet connection</string>
+    <string name="sem_contagem">Pre count invalid</string>
+    <string name="sem_musica">No music selected</string>
+    <string name="sem_musicas">Without musics</string>
+    <string name="sem_posicao">No position selected</string>
+    <string name="sem_resultados">Your search did not match any results</string>
+    <string name="semibreve">Whole note</string>
+    <string name="semicolcheia">Sixteenth note</string>
+    <string name="semifusa">Sixty-fourth note</string>
+    <string name="seminima">Quarter note</string>
+    <string name="senha">Password</string>
+    <string name="senha_nao_confere">Passwords do not match</string>
+    <string name="senha_necessaria">Password required</string>
+    <string name="sim">Yes</string>
+    <string name="sucesso_baixar">Downloaded</string>
+    <string name="sucesso_download">Download completed</string>
+    <string name="sucesso_envio">Uploaded</string>
+    <string name="sucesso_importar">Import completed</string>
+    <string name="tamanho_compassos">Your music has</string>
+    <string name="tempo_necessario">Required beats per measure</string>
+    <string name="total_de_compassos">Measures</string>
+    <string name="usuario">User</string>
+    <string name="usuario_nao_logado">Login unaccomplished</string>
+    <string name="edit">Edit</string>
+    <string name="user_area">User area</string>
+    <string name="pesquisando">Searching...</string>
+    <string name="adicionar_musica">Add music</string>
+    <string name="atualizar">Update</string>
 </resources>
