--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,5 +127,6 @@
     <string name="email_cadastrado">E-mail já cadastrado</string>
     <string name="valor_incompativel">Defina um valor de BPM entre 30 e 250</string>
     <string name="compassos_excedentes">Defina uma quantidade de compassos menor que 999</string>
+    <string name="senha_invalida">Senha inválida</string>
 
 </resources>
